<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loyalties</string>
    <string name="navigation_drawer_open">Ouvrir le volet de navigation</string>
    <string name="navigation_drawer_close">Fermer le volet de navigation</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="hello_scan">Hello on the scan</string>
    <string name="hello_write">Hello on the writing a card page</string>
    <string name="hello_cards">Hello on the cards list page</string>

    <string-array name="titres">
        <item>Home</item>
        <item>See Cards</item>
        <item>Add Card</item>
    </string-array>

    <string name="scan_title">Scanner une carte</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="logIn_user">Username</string>
    <string name="logIn_pass">Password</string>
    <string name="usernameHint">kikoulol_du_92</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="title_activity_emulate">EmulateActivity</string>
    <string name="title_activity_add_card">AddCardActivity</string>
    <string name="add_title">Add a card</string>
    <string name="scan_info">Put the card on the back of your phone</string>
    <string name="sign_in_welcome">WELCOME !</string>
    <string name="sign_in_information">Please enter some informations about you</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_username_hint">dupont_jean_du_13</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_password_hint">********</string>
    <string name="company_logo_description">Company logo</string>
    <string name="add_info">If you want to add a card you have two options :</string>
    <string name="add_info_manual">First, you can add the card manually through the form.</string>
    <string name="add_info_scan">Or if you have your NFC card, you can scan it.</string>
    <string name="add_card">Add the card</string>
    <string name="frag_home_last"><u>Last cards used :</u></string>
    <string name="frag_home_add_but">ADD NEW CARD</string>
    <string name="frag_home_card_but">CARDS</string>
    <string name="frag_home_title">HOME</string>
    <string name="see_company_card_number"><u>Card number :</u></string>
    <string name="see_company_op"><u>Opportunities :</u></string>
    <string name="see_company_points"><u>Points :</u></string>
    <string name="emulate_card_service">CardEmulation Sample</string>
    <string name="emulate_card_desc">Sample Loyalty Card</string>
    <string name="emulate_info">Put your phone on the NFC receiver</string>

</resources>
