<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#cf000000">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/see_company_title"
            android:gravity="center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="#ffdadada"/>


        <ImageView
            android:id="@+id/see_company_card"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitCenter"
            android:rotation="90"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:text="@string/see_company_card_number"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffdadada"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/see_company_number"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:text=""
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffdadada" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:textColor="#ffdadada"
            android:text="@string/see_company_points"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="#ffdadada"
            android:id="@+id/see_company_points"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:textColor="#ffdadada"
            android:text="@string/see_company_op"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="#ffdadada"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/see_company_opportunities"
            android:textSize="15sp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="#ff079ad6"
            android:textColor="#ffdadada"
            android:shadowRadius="0"
            android:text="Emulate !"
            android:layout_gravity="bottom"
            android:layout_marginTop="13dp"
            android:id="@+id/see_company_emulate"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

</ScrollView>
